# leetcode

./: .gitignore  CMakeLists.txt  README.md
c/: CMakeLists.txt  add_two_numbers.c  remove_linked_list_elements.c  reverse_integer.c  reverse_linked_list.c
python/1TwoSum/: brute_force.py
python/27RemoveElement/: rmElement.py
